[package]
name = "sol998"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol998"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# default = []
default = ["init-if-needed"]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
anchor-derive-accounts = {version = "0.24.2"}
mpl-token-metadata = { version =  "1.2.7" ,features = ["no-entrypoint"] }
solana-program = "1.9.15"
spl-associated-token-account = "1.0.3"
spl-token = {version = "3.2.0", features = ["no-entrypoint"] }
